tests/fixtures/invalid/none_bitxor_set.py
# Cannot bitwise XOR None and Set[int]
x: None = None ^ {1, 2, 3}
